// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component: DownloadXls Link Match snapshot 1`] = `
<div
  className="MuiBox-root MuiBox-root-5"
>
  <a
    className="makeStyles-link-1 "
    href="./excelfile.xlsx"
  >
    <div
      className="MuiBox-root MuiBox-root-6"
    >
      <test-file-stub
        style={
          Object {
            "fill": "currentColor",
            "verticalAlign": "middle",
          }
        }
      />
    </div>
    <span>
      NRRD
    </span>
  </a>
</div>
`;

exports[`Link component: External Link Match snapshot 1`] = `
<a
  className="makeStyles-link-1 "
  href="https://revenuedata.doi.gov/"
>
  NRRD
</a>
`;

exports[`Link component: HowWorks Link Match snapshot 1`] = `
<div
  className="MuiBox-root MuiBox-root-7"
>
  <a
    className="makeStyles-link-1 "
    href="./how-works/native/"
  >
    <div
      className="MuiBox-root MuiBox-root-8"
    >
      <test-file-stub
        style={
          Object {
            "fill": "currentColor",
            "verticalAlign": "middle",
          }
        }
      />
    </div>
    <span>
      NRRD
    </span>
  </a>
</div>
`;
